<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY nbsp "&#160;"><!-- non-breaking space, U+00A0 -->
]>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Haifa 3D</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">Only Haifa 3D devices</string>
    <string name="menu_filter_nearby">Only nearby devices</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="state">State</string>
    <string name="button_pressed">Pressed</string>
    <string name="button_released">Released</string>
    <string name="button_unknown">Unknown</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons may be used to determine the phone\'s and user\'s location. This app will not use this information in any way.
      \n\nThis is a requirement by the Android operating system and we can not change anything about this.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="connect_guide_title">CAN\'T SEE YOUR DEVICE?</string>
    <string name="connect_guide_info">1. Make sure the hand is <b>turned on</b> and the battery is not empty.
        \n\n2. Place your smartphone as close to the hand as possible.</string>
    <string name="connect_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your hand is online and in range and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="connect_guide_location_action">Enable</string>

    <string name="home_empty_title">NO STARRED PRESETS</string>
    <string name="home_empty_info">You can see your favorite presets here. To define which ones you like most, star them in the Presets section.</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">The device you selected does not seem to be a hand device by Haifa3d.</string>
    <string name="not_supported_action">Fix and try again</string>

    <string name="state_connecting">Connecting…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="title_activity_connected">ConnectedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Haifa 3D</string>
    <string name="nav_header_subtitle">Technion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_livecontrol">Live Control</string>
    <string name="menu_status">Status</string>
    <string name="menu_presets">Presets</string>
    <string name="menu_about">About</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_license_info">License Info</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_voice_control">Voice Control</string>

    <string name="demo_button">Demo</string>

    <string name="home_second">Home Second</string>

    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="bonding_failed">Bonding failed.</string>

    <string name="notification_ble_title">Haifa3D</string>
    <string name="notification_ble_channel_name">BLE Service</string>
    <string name="notification_ble_channel_description">Handle bluetooth connection in background</string>

    <string name="notification_battery_low_title">Low battery</string>
    <string name="notification_battery_low_content">Less than %1$d %% remaining</string>
    <string name="notification_battery_low_channel_name">Low Battery</string>
    <string name="notification_battery_low_channel_description">Notify about low battery levels</string>

    <string name="not_a_haifa3d_device">This is not a Haifa 3D device</string>
    <string name="connecting">Connecting…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">More to come!</string>
    <string name="livecontrol_hand_image_description">Hand</string>
    <string name="preset_not_set">This preset is not set.</string>
    <string name="action_add_hand_movement">Add hand movement</string>
    <string name="action_try_preset">Try preset: Execute now</string>
    <string name="action_try_movement">Try movement: Execute now</string>
    <string name="edit_preset_torque_label">Torque:</string>
    <string name="edit_preset_time_label">Time:</string>
    <string name="edit_preset_motors_label">Motors:</string>
    <string name="action_save_hand_action">Save hand action</string>
    <string name="action_save_hand_movement">Save hand movement</string>

    <string name="configuration_ltv">Low Torque Value</string>
    <string name="configuration_lts">Low Torque Slope Value</string>
    <string name="configuration_htv">High Torque Value</string>
    <string name="configuration_hts">High Torque Slope Value</string>
    <string name="configuration_ts">Torque Measure Start</string>
    <string name="configuration_ww">Window Width Filter</string>
    <string name="configuration_tf">Threshold Factor Motor %1$d</string>
    <string name="configuration_dv">Threshold Value Unit</string>
    <string name="configuration_deb">Debugging</string>
    <string name="configuration_basic"><b><u> Basic Configuration</u>: </b> </string>
    <string name="configuration_advanced"> <b><u> Advanced Configuration</u>: </b> </string>

    <string name="configuration_trigger_reset_presets">Reset Presets</string>
    <string name="configuration_trigger_reset_config">Reset Configuration</string>
    <string name="configuration_trigger_reset_presets_descr">Tap to reset presets to factory defaults</string>
    <string name="configuration_trigger_reset_config_descr">Tap to reset configuration to factory defaults</string>

    <string name="edit_movement_torque_label">Torque:</string>
    <string name="edit_movement_torque_high">High</string>
    <string name="edit_movement_torque_low">Low</string>
    <string name="edit_movement_time_label">Time:</string>
    <string name="edit_movement_time_value">%1$d ms</string>
    <string name="about_title">Haifa 3D</string>
    <string name="version_label">Version %1$s</string>
    <string name="developed_by_label">Developed by Georg&nbsp;Jung, Shunit&nbsp;Polinsky and Miki&nbsp;Mendelson-Mints</string>
    <string name="view_oss_licenses_button_text">View License Information</string>
    <string name="view_github_project_button_text">GitHub Project</string>
    <string name="github_url">https://github.com/Haifa3D/haifa3d-hand-app</string>
    <string name="license_info" tools:ignore="TypographyOther">
        <![CDATA[
The attached notices are provided for information only.\n
\n
-------------\n
\n
License notice for FontAwesome\n
\n
Font Awesome Free by @fontawesome - https://fontawesome.com\n
License - https://fontawesome.com/license/free\n
Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License\n
\n
I used the FontAwesome hand-paper icon as part of the logo for this project.
I use the icons hand-paper and question-circle in their regular and/or solid form in different parts of the app too.
I modified hand-paper, including changing its color. For the app\'s icon I added a graphical element in the middle.\n
\n
-------------\n
\n
License notice for NordicSemiconductor\'s Android-BLE-Library\n
\n
Copyright (c) 2015, Nordic Semiconductor\n
All rights reserved.\n
\n
Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:\n
\n
* Redistributions of source code must retain the above copyright notice, this
  list of conditions and the following disclaimer.\n
\n
* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation
  and/or other materials provided with the distribution.\n
\n
* Neither the name of Nordic Semiconductor ASA nor the names of its
  contributors may be used to endorse or promote products derived from
  this software without specific prior written permission.\n
\n
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n
]]>
    </string>
    <string name="hand_illustration_label_open">Open</string>
    <string name="hand_illustration_label_close">Close</string>
    <string name="preset_name_label">Name:</string>
    <string name="preset_name_edit_hint">Preset name</string>
    <string name="config_value_invalid">Invalid input</string>
    <string name="config_value_invalid_range">Invalid input - Insert value between 1-20</string>
    <string name="config_value_changed">Config changed successful</string>
    <string name="config_trigger_field_triggered">%1$s triggered</string>
    <string name="config_trigger_field_question">Are you sure you want to continue with "%1$s"?</string>
    <string name="config_value_true">Enabled</string>
    <string name="config_value_false">Disabled</string>
    <string name="config_bool_question">Should "%1$s" be enabled or disabled?</string>
</resources>
