<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/app_bar_connected">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_livecontrol"
        android:icon="@drawable/ic_settings_remote"
        android:title="@string/menu_livecontrol" />
    <item
        android:id="@+id/nav_configuration"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_configuration" />
    <item
        android:id="@+id/nav_presets"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_presets" />
    <item
        android:id="@+id/nav_voice_control"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_voice_control" />

</menu>