<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_about"
		android:title="@string/menu_about"
		android:icon="@drawable/ic_question_circle_regular_padded"
		android:orderInCategory="0"
		android:padding="5dp"
		app:showAsAction="ifRoom">
	</item>
	<item
        android:title="@string/menu_filter"
		android:icon="@drawable/ic_filter"
		android:orderInCategory="1"
		app:showAsAction="always">

		<menu>
			<item android:id="@+id/filter_uuid"
				android:checkable="true"
				android:checked="true"
				android:title="@string/menu_filter_uuid"/>

			<item android:id="@+id/filter_nearby"
				android:checkable="true"
				android:title="@string/menu_filter_nearby"/>
		</menu>
	</item>
</menu>