<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gjung.haifa3d.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/nav_livecontrol"
        android:name="com.gjung.haifa3d.ui.livecontrol.LiveControlFragment"
        android:label="@string/menu_livecontrol"
        tools:layout="@layout/fragment_live_control" />
    <fragment
        android:id="@+id/nav_presets"
        android:name="com.gjung.haifa3d.ui.presets.PresetsFragment"
        android:label="@string/menu_presets"
        tools:layout="@layout/fragment_presets" >
        <action
            android:id="@+id/edit_preset"
            app:destination="@id/nav_edit_preset" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_preset"
        android:name="com.gjung.haifa3d.ui.presets.EditPresetFragment"
        tools:layout="@layout/fragment_edit_preset">
        <argument
            android:name="presetId"
            app:argType="integer">
        </argument>
        <action
            android:id="@+id/edit_movement"
            app:destination="@id/nav_edit_movement" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_movement"
        android:name="com.gjung.haifa3d.ui.presets.EditMovementFragment"
        tools:layout="@layout/fragment_edit_movement">
        <argument
            android:name="presetId"
            app:argType="integer" />
        <argument
            android:name="movementId"
            app:argType="integer">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.gjung.haifa3d.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/show_license_info"
            app:destination="@id/nav_license_info" />
    </fragment>
    <fragment
        android:id="@+id/nav_license_info"
        android:name="com.gjung.haifa3d.ui.about.LicenseInfoFragment"
        android:label="@string/menu_license_info"
        tools:layout="@layout/fragment_license_info" />
    <fragment
        android:id="@+id/nav_configuration"
        android:name="com.gjung.haifa3d.ui.config.ConfigurationFragment"
        android:label="@string/menu_configuration"
        tools:layout="@layout/fragment_configuration" />
</navigation>